# billing

./: README.md  pyproject.toml
billing/: redisWork.py  workBitrix.py  workFlask.py
create_billing_for_add_event/: fastApiWork.py  pyproject.toml  workBitrix.py  workFlask.py
create_billing_for_close_task/: Dockerfile  helper.py  test.py  workBitrix.py  workFlask.py
