[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.4"
fast-bitrix24 = "^1.8.0"
flask = "^3.0.3"
flask-restx = "^1.3.0"
python-dotenv = "^1.0.1"
bitrix24-rest = "^2.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
